--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,8 +4,7 @@
         justify-content: space-between;
         margin: 0 auto;
         width: 90%;
-        margin-top: 20px;
-    
+        margin-top: 50px;
         font-family: 'Space Mono', sans-serif;
     }
     
@@ -34,8 +33,7 @@
         justify-content: space-between;
         margin: 0 auto;
         width: 80%;
-        margin-top: 100px;
-    
+        margin-top: 80px;
         font-family: 'Space Mono', sans-serif;
     }
     
@@ -63,8 +61,8 @@
         display: flex;
         justify-content: space-between;
         margin: 0 auto;
-        width: 50%;
-        margin-top: 50px;
+        width: 730px;
+        margin-top: 100px;
     
         font-family: 'Space Mono', sans-serif;
     }
