--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -150,7 +150,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 50%;
+        width: 730px;
         gap: 20px;
         background-color: #fefefe;
         padding: 35px;
