--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,16 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+.appBody {
+  height: 100vh;
   background: #f5f7ff;
+  padding-top: 30px
+}
+
+/* dark mode styles */
+.appBody.dark-mode {
+  background: #141D2F;
+  height: 100vh;
 }
