🌈 style(Search component): Set dark mode
Create the rules for dark mode in the component

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -30,7 +30,7 @@
         left: -5px;
     }
 
-    input {
+    .input {
         border: none;
         background-color: #fefefe;
         font-size: 13px;
@@ -46,7 +46,7 @@
         left: 12%;
     }
 
-    input:focus {
+    .input:focus {
         outline: none;
         font-size: 13px;
         font-family: 'Space Mono', sans-serif;
@@ -65,6 +65,21 @@
 
         position: absolute;
         right: 1.5%;
+    }
+
+     /* Add all dark mode styles */
+     .input.dark-mode {
+        background-color: #1E2A47;
+        color: #FFF;
+    }
+
+    .input[type="text"].dark-mode::placeholder {
+        color: #fff;
+    }
+
+    .form.dark-mode {
+        background-color: #1E2A47;
+
     }
 }
 
@@ -94,17 +109,17 @@
 
     .searchImg {
         margin-left: 15px;
-        height: 20px;
-        width: 20px;
+        height: 24px;
+        width: 24px;
 
         position: absolute;
         left: -5px;
     }
 
-    input {
+    .input {
         border: none;
         background-color: #fefefe;
-        font-size: 13px;
+        font-size: 18px;
         font-family: 'Space Mono', sans-serif;
         font-weight: 400;
         color: #4B6A9B;
@@ -117,7 +132,7 @@
         left: 8%;
     }
 
-    input:focus {
+    .input:focus {
         outline: none;
         font-size: 13px;
         font-family: 'Space Mono', sans-serif;
@@ -132,10 +147,25 @@
         border: none;
         color: #fefefe;
         font-family: 'Space Mono', sans-serif;
-        font-size: 14px;
+        font-size: 16px;
 
         position: absolute;
         right: 1.5%;
+    }
+
+     /* Add all dark mode styles */
+     .input.dark-mode {
+        background-color: #1E2A47;
+        color: #FFF;
+    }
+
+    .input[type="text"].dark-mode::placeholder {
+        color: #fff;
+    }
+
+    .form.dark-mode {
+        background-color: #1E2A47;
+
     }
 }
 
@@ -164,18 +194,18 @@
     }
 
     .searchImg {
-        margin-left: 15px;
-        height: 20px;
-        width: 20px;
+        margin-left: 18px;
+        height: 24px;
+        width: 24px;
 
         position: absolute;
         left: -5px;
     }
 
-    input {
+    .input {
         border: none;
         background-color: #fefefe;
-        font-size: 16px;
+        font-size: 18px;
         font-family: 'Space Mono', sans-serif;
         font-weight: 400;
         color: #4B6A9B;
@@ -188,7 +218,7 @@
         left: 8%;
     }
 
-    input:focus {
+    .input:focus {
         outline: none;
         font-size: 16px;
         font-family: 'Space Mono', sans-serif;
@@ -207,5 +237,20 @@
 
         position: absolute;
         right: 1.5%;
+    }
+
+     /* Add all dark mode styles */
+    .input.dark-mode {
+        background-color: #1E2A47;
+        color: #FFF;
+    }
+
+    .input[type="text"].dark-mode::placeholder {
+        color: #fff;
+    }
+
+    .form.dark-mode {
+        background-color: #1E2A47;
+
     }
 }
