--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
         justify-content: space-between;
         margin: 0 auto;
         width: 90%;
-        margin-top: 10px;
+        /* margin-top: 1%; */
         font-family: 'Space Mono', sans-serif;
     }
     
@@ -46,7 +46,7 @@
         justify-content: space-between;
         margin: 0 auto;
         width: 80%;
-        margin-top: 60px;
+        margin-top: 50px;
         font-family: 'Space Mono', sans-serif;
     }
     
@@ -88,8 +88,6 @@
         justify-content: space-between;
         margin: 0 auto;
         width: 730px;
-        margin-top: 100px;
-    
         font-family: 'Space Mono', sans-serif;
     }
     
