--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -15,7 +15,7 @@
         padding: 35px;
         
         border-radius: 15px;
-        margin-top: 30px;
+        margin-top: 2%;
         box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
 
         position: relative;
@@ -40,7 +40,7 @@
         height: 30px;
         margin: 0 auto;
         padding-right: 10px;
-        width: calc(100% - 50px);
+        width: calc(100% - 90px);
 
         position: absolute;
         left: 12%;
@@ -187,7 +187,7 @@
         
         border-radius: 15px;
         margin: 0;
-        margin-top: 60px;
+        margin-top: 2%;
         box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
 
         position: relative;
